<resources>
    <string name="app_name">14112089_Konversisuhu</string>
    <string name="string_konversi" />
    <string name="celsius_ke_fahrenheit">Celsius Ke Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit_ke_celsius">Fahrenheit Ke Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="konversi">konversi</string>
</resources>
